完善自动发布功能